sumo/tests/sumo/errors/invalid_time/errors.sumo
Error: Input string 'invalidInput' is not a valid number or exceeds the time value range.
Quitting (on error).
